--- a/index.html
+++ b/index.html
@@ -1,17 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Page</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mystery Class Records</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Page</h1>
-    </header>
-    <main>
-        <p>This is a very basic webpage. I'm learning how to code using Visual Studio Code!</p>
-    </main>
+  <!-- Header -->
+  <header class="header">
+    <!-- Logo Image -->
+    <!-- Commented: <img src="images/logo.png" alt="Mystery Class Records Logo"> -->
+    <nav>
+      <a href="#">Store</a>
+      <a href="#">Artists</a>
+      <a href="#">About</a>
+      <a href="#">News</a>
+      <a href="#">Cart</a>
+    </nav>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="hero-text">
+      <h1>MYSTERY CLASS RECORDS</h1>
+      <p>UNEXPLAINABLY GOOD MUSIC.</p>
+    </div>
+    <!-- Star Image -->
+    <!-- Commented: <img src="images/star.png" alt="Star Graphic"> -->
+  </section>
+
+  <!-- Latest Release Section -->
+  <section class="latest-release">
+    <!-- Cassette Image -->
+    <!-- Commented: <img src="images/cassette.png" alt="Cassette Image"> -->
+    <div class="release-text">
+      <p>LATEST RELEASE</p>
+      <h2>SIDE QUESTS VOL. 1</h2>
+      <p>The first ever Mystery Class Records release. Nine tracks by Oklahoma artists compiled by our team to show off the massive talent in our community.</p>
+      <p>Limited to 50 copies.</p>
+      <button>Pre-Order</button>
+    </div>
+  </section>
+
+  <!-- Product Grid -->
+  <section class="product-grid">
+    <div class="product">
+      <!-- Product Image Placeholder -->
+      <!-- Commented: <img src="images/product1.png" alt="Product 1 Image"> -->
+      <p>Product Name</p>
+      <p>$10</p>
+    </div>
+    <!-- Repeat product blocks as needed -->
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="footer-logo">
+      <!-- Footer Logo -->
+      <!-- Commented: <img src="images/footer-logo.png" alt="Footer Logo"> -->
+    </div>
+    <nav>
+      <a href="#">Store</a>
+      <a href="#">Artists</a>
+      <a href="#">About</a>
+    </nav>
+    <div class="social-media">
+      <!-- Social Media Icons -->
+      <!-- Commented: Add social media icons -->
+    </div>
+  </footer>
 </body>
 </html>
