header updated with images

--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
 <body>
   <!-- Header -->
   <header class="header">
-    <!-- Logo Image -->
-    <!-- Commented: <img src="images/logo.png" alt="Mystery Class Records Logo"> -->
-    <nav>
+    <div class="logo">
+      <img src="images/mystery-class-logo.svg" alt="Mystery Class Records Logo">
+    </div>
+    <nav class="nav">
       <a href="#">Store</a>
       <a href="#">Artists</a>
       <a href="#">About</a>
       <a href="#">News</a>
-      <a href="#">Cart</a>
+      <a href="#" class="cart">Cart</a>
     </nav>
+    <div class="rainbow-strip">
+      <img src="images/rainbow-strip.svg" alt="Rainbow Strip">
+    </div>
   </header>
 
   <!-- Hero Section -->
