--- a/index.html
+++ b/index.html
@@ -1,78 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mystery Class Records</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <!-- Header -->
-  <header class="header">
-    <div class="logo">
-      <img src="images/mystery-class-logo.svg" alt="Mystery Class Records Logo">
-    </div>
-    <nav class="nav">
-      <a href="#">Store</a>
-      <a href="#">Artists</a>
-      <a href="#">About</a>
-      <a href="#">News</a>
-      <a href="#" class="cart">Cart</a>
-    </nav>
-    <div class="rainbow-strip">
-      <img src="images/rainbow-strip.svg" alt="Rainbow Strip">
-    </div>
-  </header>
-
-  <!-- Hero Section -->
-  <section class="hero">
-    <div class="hero-text">
-      <h1>MYSTERY CLASS RECORDS</h1>
-      <p>UNEXPLAINABLY GOOD MUSIC.</p>
-    </div>
-    <!-- Star Image -->
-    <!-- Commented: <img src="images/star.png" alt="Star Graphic"> -->
-  </section>
-
-  <!-- Latest Release Section -->
-  <section class="latest-release">
-    <!-- Cassette Image -->
-    <!-- Commented: <img src="images/cassette.png" alt="Cassette Image"> -->
-    <div class="release-text">
-      <p>LATEST RELEASE</p>
-      <h2>SIDE QUESTS VOL. 1</h2>
-      <p>The first ever Mystery Class Records release. Nine tracks by Oklahoma artists compiled by our team to show off the massive talent in our community.</p>
-      <p>Limited to 50 copies.</p>
-      <button>Pre-Order</button>
-    </div>
-  </section>
-
-  <!-- Product Grid -->
-  <section class="product-grid">
-    <div class="product">
-      <!-- Product Image Placeholder -->
-      <!-- Commented: <img src="images/product1.png" alt="Product 1 Image"> -->
-      <p>Product Name</p>
-      <p>$10</p>
-    </div>
-    <!-- Repeat product blocks as needed -->
-  </section>
-
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="footer-logo">
-      <!-- Footer Logo -->
-      <!-- Commented: <img src="images/footer-logo.png" alt="Footer Logo"> -->
-    </div>
-    <nav>
-      <a href="#">Store</a>
-      <a href="#">Artists</a>
-      <a href="#">About</a>
-    </nav>
-    <div class="social-media">
-      <!-- Social Media Icons -->
-      <!-- Commented: Add social media icons -->
-    </div>
-  </footer>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mystery Class Records</title>
+    <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
+    <link rel="stylesheet" href="style.css"> <!-- Links the external CSS file for styling -->
+  </head>
+  <body>
+    <header class="header">
+      <div class="logo">
+        <img src="images/mystery-class-logo.svg" alt="Mystery Class Records Logo">
+      </div>
+      <nav class="nav">
+        <a href="#">STORE</a>
+        <a href="#">ARTISTS</a>
+        <a href="#">ABOUT</a>
+        <a href="#">NEWS</a>
+        <a href="#" class="cart">CART</a>
+      </nav>
+      <div class="rainbow-strip">
+        <img src="images/rainbow-strip.svg" alt="Rainbow Strip">
+      </div>
+    </header>
+  </body>
 </html>
