--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mystery Class Records</title>
+    <link rel="icon" href="favicon2.ico" type="image/x-icon"> <!-- Links the favicon -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
     <link rel="stylesheet" href="style.css"> <!-- Links the external CSS file for styling -->
   </head>
@@ -23,5 +24,15 @@
         <img src="images/rainbow-strip.svg" alt="Rainbow Strip">
       </div>
     </header>
+    <div class="hero">
+      <div class="hero-content">
+        <div class="hero-title">
+          <img src="images/website-title.svg" alt="Mystery Class Records Title">
+        </div>
+        <div class="hero-star">
+          <img src="images/star.svg" alt="Star Graphic">
+        </div>
+      </div>
+    </div>
   </body>
 </html>
