fixed rainbow strip

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mystery Class Records</title>
-    <link rel="icon" href="favicon2.ico" type="image/x-icon"> <!-- Links the favicon -->
+    <link rel="icon" href="favicon2.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon2.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
     <link rel="stylesheet" href="style.css"> <!-- Links the external CSS file for styling -->
   </head>
   <body>
     <header class="header">
       <div class="logo">
-        <img src="images/mystery-class-logo.svg" alt="Mystery Class Records Logo">
+        <img src="images/mystery-class-logo.svg" alt="Logo">
       </div>
       <nav class="nav">
         <a href="#">STORE</a>
@@ -23,7 +24,7 @@
       <div class="rainbow-strip">
         <img src="images/rainbow-strip.svg" alt="Rainbow Strip">
       </div>
-    </header>
+    </header>    
     <div class="hero">
       <div class="hero-content">
         <div class="hero-title">
