latest release desktop

--- a/index.html
+++ b/index.html
@@ -35,5 +35,20 @@
         </div>
       </div>
     </div>
+    <div class="latest-release">
+      <div class="tape-stack">
+        <img src="images/tape-stack.png" alt="Cassette Tape Stack">
+      </div>
+      <div class="release-info">
+        <h2 class="release-heading">LATEST RELEASE</h2>
+        <h3 class="release-title">SIDE QUESTS VOL. 1</h3>
+        <img src="images/rainbow-underline.svg" alt="Rainbow Underline" class="rainbow-underline">
+        <p>The first ever Mystery Class Records release. Nine tracks by Oklahoma artists compiled by our team to show off the massive talent in our community.</p>
+        <p><strong>Limited to 50 copies.</strong></p>
+        <button class="pre-order">
+          <img src="images/pre-order-button.svg" alt="Pre-Order Button">
+        </button>
+      </div>
+    </div>    
   </body>
 </html>
