--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     </header>    
     <div class="hero">
       <div class="hero-content">
-        <div class="hero-title">
-          <img src="images/website-title.svg" alt="Mystery Class Records Title">
+        <div class="hero-text">
+          <h1 class="hero-title">MYSTERY CLASS<br>RECORDS</h1>
+          <p class="hero-detail">UNEXPLAINABLY GOOD MUSIC.</p>
         </div>
         <div class="hero-star">
           <img src="images/star.svg" alt="Star Graphic">
@@ -39,7 +40,7 @@
       <div class="tape-stack">
         <img src="images/tape-stack.png" alt="Cassette Tape Stack">
       </div>
-      <div class="release-info">
+      <div class="release-text">
         <h2 class="release-heading">LATEST RELEASE</h2>
         <h3 class="release-title">SIDE QUESTS VOL. 1</h3>
         <img src="images/rainbow-underline.svg" alt="Rainbow Underline" class="rainbow-underline">
