started merch section

--- a/index.html
+++ b/index.html
@@ -50,6 +50,32 @@
           <img src="images/pre-order-button.svg" alt="Pre-Order Button">
         </button>
       </div>
+    </div>
+    <div class="merch-section">
+      <div class="merch-grid">
+        <!-- Example merch blocks -->
+        <div class="merch-block">
+          <img src="images/merch-block.svg" alt="Merch Block" class="block-frame">
+          <div class="merch-details">
+            <div class="merch-info">
+              <p class="artist-name">MYSTERY CLASS RECORDS</p>
+              <p class="item-name">SIDE QUESTS VOL. 1 - Cassette</p>
+            </div>
+            <div class="price">$10</div>
+          </div>
+        </div>
+        <div class="merch-block">
+          <img src="images/merch-block.svg" alt="Merch Block" class="block-frame">
+          <div class="merch-details">
+            <div class="merch-info">
+              <p class="artist-name">CRYHARD</p>
+              <p class="item-name">OF COURSE I WILL - Vinyl</p>
+            </div>
+            <div class="price">$30</div>
+          </div>
+        </div>
+        <!-- Add more merch blocks as needed -->
+      </div>
     </div>    
   </body>
 </html>
