added more merch blocks

--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
     </div>
     <div class="merch-section">
       <div class="merch-grid">
-        <!-- Example merch blocks -->
         <div class="merch-block">
           <img src="images/merch-block.svg" alt="Merch Block" class="block-frame">
           <div class="merch-details">
@@ -74,7 +73,66 @@
             <div class="price">$30</div>
           </div>
         </div>
-        <!-- Add more merch blocks as needed -->
+        <div class="merch-block">
+          <img src="images/merch-block.svg" alt="Merch Block" class="block-frame">
+          <div class="merch-details">
+            <div class="merch-info">
+              <p class="artist-name">CRYHARD</p>
+              <p class="item-name">OF COURSE I WILL - Vinyl</p>
+            </div>
+            <div class="price">$30</div>
+          </div>
+        </div>
+        <div class="merch-block">
+          <img src="images/merch-block.svg" alt="Merch Block" class="block-frame">
+          <div class="merch-details">
+            <div class="merch-info">
+              <p class="artist-name">CRYHARD</p>
+              <p class="item-name">OF COURSE I WILL - Vinyl</p>
+            </div>
+            <div class="price">$30</div>
+          </div>
+        </div>
+        <div class="merch-block">
+          <img src="images/merch-block.svg" alt="Merch Block" class="block-frame">
+          <div class="merch-details">
+            <div class="merch-info">
+              <p class="artist-name">CRYHARD</p>
+              <p class="item-name">OF COURSE I WILL - Vinyl</p>
+            </div>
+            <div class="price">$30</div>
+          </div>
+        </div>
+        <div class="merch-block">
+          <img src="images/merch-block.svg" alt="Merch Block" class="block-frame">
+          <div class="merch-details">
+            <div class="merch-info">
+              <p class="artist-name">CRYHARD</p>
+              <p class="item-name">OF COURSE I WILL - Vinyl</p>
+            </div>
+            <div class="price">$30</div>
+          </div>
+        </div>
+        <div class="merch-block">
+          <img src="images/merch-block.svg" alt="Merch Block" class="block-frame">
+          <div class="merch-details">
+            <div class="merch-info">
+              <p class="artist-name">CRYHARD</p>
+              <p class="item-name">OF COURSE I WILL - Vinyl</p>
+            </div>
+            <div class="price">$30</div>
+          </div>
+        </div>
+        <div class="merch-block">
+          <img src="images/merch-block.svg" alt="Merch Block" class="block-frame">
+          <div class="merch-details">
+            <div class="merch-info">
+              <p class="artist-name">CRYHARD</p>
+              <p class="item-name">OF COURSE I WILL - Vinyl</p>
+            </div>
+            <div class="price">$30</div>
+          </div>
+        </div>
       </div>
     </div>    
   </body>
