--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header class="header">
       <div class="logo">
-        <img src="images/mystery-class-logo.svg" alt="Logo">
+        <img src="images/header-logo.svg" alt="Logo">
       </div>
       <nav class="nav">
         <a href="#">STORE</a>
@@ -134,6 +134,33 @@
           </div>
         </div>
       </div>
-    </div>    
+    </div>
+    <footer class="footer">
+      <div class="footer-top">
+        <div class="footer-logo">
+          <img src="images/footer-logo.svg" alt="Footer Logo">
+        </div>
+        <nav class="footer-nav">
+          <a href="#">STORE</a>
+          <a href="#">ARTISTS</a>
+          <a href="#">ABOUT</a>
+        </nav>
+        <div class="footer-separator">
+          <img src="images/footer-separator.svg" alt="Footer Separator">
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <div class="footer-tagline">
+          <p>UNEXPLAINABLY GOOD MUSIC.</p>
+          <img src="images/footer-icon.svg" alt="Footer Icon">
+        </div>
+        <div class="footer-copyright">
+          <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
+        </div>
+        <div class="footer-social">
+          <img src="images/social-icons.svg" alt="Social Icons">
+        </div>
+      </div>
+    </footer>    
   </body>
 </html>
