new footer separator

--- a/index.html
+++ b/index.html
@@ -140,14 +140,17 @@
         <div class="footer-logo">
           <img src="images/footer-logo.svg" alt="Footer Logo">
         </div>
+        <div class="footer-vertical-separator">
+          <img src="images/footer-vertical-separator.svg" alt="Footer Vertical Separator">
+        </div>
         <nav class="footer-nav">
           <a href="#">STORE</a>
           <a href="#">ARTISTS</a>
           <a href="#">ABOUT</a>
         </nav>
       </div>
-      <div class="footer-separator">
-        <img src="images/footer-separator.svg" alt="Footer Separator">
+      <div class="footer-horizontal-separator">
+        <img src="images/footer-horizontal-separator.svg" alt="Footer Horizontal Separator">
       </div>
       <div class="footer-bottom">
         <div class="footer-tagline">
