scrolling header + clickable links

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mystery Class Records</title>
     <link rel="icon" href="favicon2.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="favicon2.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
-    <link rel="stylesheet" href="style.css"> <!-- Links the external CSS file for styling -->
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="header">
@@ -15,16 +15,16 @@
         <img src="images/header-logo.svg" alt="Logo">
       </div>
       <nav class="nav">
-        <a href="#">STORE</a>
-        <a href="#">ARTISTS</a>
-        <a href="#">ABOUT</a>
-        <a href="#">NEWS</a>
+        <a href="store.html">STORE</a>
+        <a href="artists.html">ARTISTS</a>
+        <a href="about.html">ABOUT</a>
         <a href="#" class="cart">CART</a>
       </nav>
       <div class="rainbow-strip">
         <img src="images/rainbow-strip.svg" alt="Rainbow Strip">
       </div>
-    </header>    
+    </header> 
+    <div class="header-spacer"></div>   
     <div class="hero">
       <div class="hero-content">
         <div class="hero-text">
@@ -144,9 +144,9 @@
           <img src="images/footer-vertical-separator.svg" alt="Footer Vertical Separator">
         </div>
         <nav class="footer-nav">
-          <a href="#">STORE</a>
-          <a href="#">ARTISTS</a>
-          <a href="#">ABOUT</a>
+          <a href="store.html">STORE</a>
+          <a href="artists.html">ARTISTS</a>
+          <a href="about.html">ABOUT</a>
         </nav>
       </div>
       <div class="footer-horizontal-separator">
@@ -165,5 +165,6 @@
         </div>
       </div>
     </footer>
+    <script src="scripts/header-scroll.js"></script>
   </body>
 </html>
