--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
       <div class="rainbow-strip">
         <img src="images/rainbow-strip.svg" alt="Rainbow Strip">
       </div>
-    </header> 
+      <div class="hamburger-icon">
+        <img src="images/hamburger-icon.svg" alt="Hamburger Menu">
+      </div>
+    </header>
     <div class="header-spacer"></div>   
     <div class="hero">
       <div class="hero-content">
