--- a/index.html
+++ b/index.html
@@ -12,7 +12,23 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>  
-    <header></header>
+    <header class="header">
+      <div class="logo">
+        <img src="../images/header-logo.svg" alt="Logo">
+      </div>
+      <nav class="nav">
+        <a href="store.html">STORE</a>
+        <a href="artists.html">ARTISTS</a>
+        <a href="about.html">ABOUT</a>
+        <a href="#" class="cart">CART</a>
+      </nav>
+      <div class="rainbow-strip">
+        <img src="../images/rainbow-strip.svg" alt="Rainbow Strip">
+      </div>
+      <div class="hamburger-icon">
+        <img src="../images/hamburger-icon.svg" alt="Hamburger Menu">
+      </div>
+    </header>
     <div class="header-spacer"></div> 
     <div class="hero">
       <div class="hero-content">
@@ -124,7 +140,36 @@
         </div>
       </div>
     </div>
-    <footer></footer>
+    <footer class="footer">
+      <div class="footer-top">
+        <div class="footer-logo">
+          <img src="../images/footer-logo.svg" alt="Footer Logo">
+        </div>
+        <div class="footer-vertical-separator">
+          <img src="../images/footer-vertical-separator.svg" alt="Footer Vertical Separator">
+        </div>
+        <nav class="footer-nav">
+          <a href="store.html">STORE</a>
+          <a href="artists.html">ARTISTS</a>
+          <a href="about.html">ABOUT</a>
+        </nav>
+      </div>
+      <div class="footer-horizontal-separator">
+        <img src="../images/footer-horizontal-separator.svg" alt="Footer Horizontal Separator">
+      </div>
+      <div class="footer-bottom">
+        <div class="footer-tagline">
+          <p>UNEXPLAINABLY GOOD MUSIC.</p>
+          <img src="../images/footer-icon.svg" alt="Footer Icon">
+        </div>
+        <div class="footer-copyright">
+          <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
+        </div>
+        <div class="footer-social">
+          <img src="../images/social-icons.svg" alt="Social Icons">
+        </div>
+      </div>
+    </footer>
     <script src="scripts/load-header-footer.js"></script>
     <script src="scripts/header-scroll.js"></script>
   </body>
