fixed header/footer links

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <img src="../images/header-logo.svg" alt="Logo">
       </div>
       <nav class="nav">
-        <a href="store.html">STORE</a>
-        <a href="artists.html">ARTISTS</a>
-        <a href="about.html">ABOUT</a>
+        <a href="pages/store.html">STORE</a>
+        <a href="pages/artists.html">ARTISTS</a>
+        <a href="pages/about.html">ABOUT</a>
         <a href="#" class="cart">CART</a>
       </nav>
       <div class="rainbow-strip">
@@ -149,9 +149,9 @@
           <img src="../images/footer-vertical-separator.svg" alt="Footer Vertical Separator">
         </div>
         <nav class="footer-nav">
-          <a href="store.html">STORE</a>
-          <a href="artists.html">ARTISTS</a>
-          <a href="about.html">ABOUT</a>
+          <a href="pages/store.html">STORE</a>
+          <a href="pages/artists.html">ARTISTS</a>
+          <a href="pages/about.html">ABOUT</a>
         </nav>
       </div>
       <div class="footer-horizontal-separator">
