--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>  
     <header class="header">
       <div class="logo">
-        <img src="../images/header-logo.svg" alt="Logo">
+        <img src="images/header-logo.svg" alt="Logo">
       </div>
       <nav class="nav">
         <a href="pages/store.html">STORE</a>
@@ -23,10 +23,10 @@
         <a href="#" class="cart">CART</a>
       </nav>
       <div class="rainbow-strip">
-        <img src="../images/rainbow-strip.svg" alt="Rainbow Strip">
+        <img src="images/rainbow-strip.svg" alt="Rainbow Strip">
       </div>
       <div class="hamburger-icon">
-        <img src="../images/hamburger-icon.svg" alt="Hamburger Menu">
+        <img src="images/hamburger-icon.svg" alt="Hamburger Menu">
       </div>
     </header>
     <div class="header-spacer"></div> 
@@ -143,10 +143,10 @@
     <footer class="footer">
       <div class="footer-top">
         <div class="footer-logo">
-          <img src="../images/footer-logo.svg" alt="Footer Logo">
+          <img src="images/footer-logo.svg" alt="Footer Logo">
         </div>
         <div class="footer-vertical-separator">
-          <img src="../images/footer-vertical-separator.svg" alt="Footer Vertical Separator">
+          <img src="images/footer-vertical-separator.svg" alt="Footer Vertical Separator">
         </div>
         <nav class="footer-nav">
           <a href="pages/store.html">STORE</a>
@@ -155,18 +155,18 @@
         </nav>
       </div>
       <div class="footer-horizontal-separator">
-        <img src="../images/footer-horizontal-separator.svg" alt="Footer Horizontal Separator">
+        <img src="images/footer-horizontal-separator.svg" alt="Footer Horizontal Separator">
       </div>
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="../images/footer-icon.svg" alt="Footer Icon">
+          <img src="images/footer-icon.svg" alt="Footer Icon">
         </div>
         <div class="footer-copyright">
           <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
-          <img src="../images/social-icons.svg" alt="Social Icons">
+          <img src="images/social-icons.svg" alt="Social Icons">
         </div>
       </div>
     </footer>
