set desktop footer styles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mystery Class Records</title>
-    <link rel="icon" href="favicon2.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
     <link rel="stylesheet" href="css/header.css">
@@ -142,11 +142,13 @@
     </div>
     <footer class="footer">
       <div class="footer-top">
-        <div class="footer-logo">
-          <img src="images/footer-logo.svg" alt="Footer Logo">
-        </div>
-        <div class="footer-vertical-separator">
-          <img src="images/footer-vertical-separator.svg" alt="Footer Vertical Separator">
+        <div class="footer-logo-container">
+          <div class="footer-logo">
+            <img src="images/footer-logo.svg" alt="Footer Logo">
+          </div>
+          <div class="footer-vertical-separator">
+            <img src="images/footer-vertical-separator.svg" alt="Footer Vertical Separator">
+          </div>
         </div>
         <nav class="footer-nav">
           <a href="pages/store.html">STORE</a>
