--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Metadata and Stylesheets -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mystery Class Records</title>
@@ -12,14 +13,15 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>  
+    <!-- Header Section -->
     <header class="header">
       <div class="logo">
         <img src="images/header-logo.svg" alt="Logo">
       </div>
       <nav class="nav">
-        <a href="pages/store.html">STORE</a>
-        <a href="pages/artists.html">ARTISTS</a>
-        <a href="pages/about.html">ABOUT</a>
+        <a href="store.html">STORE</a>
+        <a href="artists.html">ARTISTS</a>
+        <a href="about.html">ABOUT</a>
         <a href="#" class="cart">CART</a>
       </nav>
       <div class="rainbow-strip">
@@ -29,7 +31,11 @@
         <img src="images/hamburger-icon.svg" alt="Hamburger Menu">
       </div>
     </header>
+
+    <!-- Header Spacer -->
     <div class="header-spacer"></div> 
+
+    <!-- Hero Section -->
     <div class="hero">
       <div class="hero-content">
         <div class="hero-text">
@@ -41,6 +47,8 @@
         </div>
       </div>
     </div>
+
+    <!-- Latest Release Section -->
     <div class="latest-release">
       <div class="tape-stack">
         <img src="images/tape-stack.png" alt="Cassette Tape Stack">
@@ -56,6 +64,8 @@
         </button>
       </div>
     </div>
+
+    <!-- Merch Section -->
     <div class="merch-section">
       <div class="merch-grid">
         <div class="merch-block">
@@ -68,6 +78,8 @@
             <div class="price">$10</div>
           </div>
         </div>
+
+        <!-- Additional Merch Blocks -->
         <div class="merch-block">
           <img src="images/merch-block.svg" alt="Merch Block" class="block-frame">
           <div class="merch-details">
@@ -140,6 +152,8 @@
         </div>
       </div>
     </div>
+    
+    <!-- Footer Section -->
     <footer class="footer">
       <div class="footer-top">
         <div class="footer-logo-container">
@@ -151,9 +165,9 @@
           </div>
         </div>
         <nav class="footer-nav">
-          <a href="pages/store.html">STORE</a>
-          <a href="pages/artists.html">ARTISTS</a>
-          <a href="pages/about.html">ABOUT</a>
+          <a href="store.html">STORE</a>
+          <a href="artists.html">ARTISTS</a>
+          <a href="about.html">ABOUT</a>
         </nav>
       </div>
       <div class="footer-horizontal-separator">
@@ -172,6 +186,8 @@
         </div>
       </div>
     </footer>
+
+    <!-- Scripts -->
     <script src="scripts/load-header-footer.js"></script>
     <script src="scripts/header-scroll.js"></script>
   </body>
