removed index.html from links

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <img src="images/header-logo.svg" alt="Logo">
       </div>
       <nav class="nav">
-        <a href="store/index.html">STORE</a>
-        <a href="artists/index.html">ARTISTS</a>
-        <a href="about/index.html">ABOUT</a>
+        <a href="store/">STORE</a>
+        <a href="artists/">ARTISTS</a>
+        <a href="about/">ABOUT</a>
         <a href="#" class="cart">CART</a>
       </nav>
       <div class="rainbow-strip">
@@ -166,9 +166,9 @@
           </div>
         </div>
         <nav class="footer-nav">
-          <a href="store/index.html">STORE</a>
-          <a href="artists/index.html">ARTISTS</a>
-          <a href="about/index.html">ABOUT</a>
+          <a href="store/">STORE</a>
+          <a href="artists/">ARTISTS</a>
+          <a href="about/">ABOUT</a>
         </nav>
       </div>
       <div class="footer-horizontal-separator">
