reverted to relative paths

--- a/index.html
+++ b/index.html
@@ -5,33 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mystery Class Records</title>
-    <base href="/mystery-class-records">
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/footer.css">
-    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/home.css">
   </head>
   <body>  
     
     <!-- Header Section -->
     <header class="header">
       <div class="logo">
-        <img src="/images/header-logo.svg" alt="Logo">
+        <img src="images/header-logo.svg" alt="Logo">
       </div>
       <nav class="nav">
-        <a href="/store">STORE</a>
-        <a href="/artists">ARTISTS</a>
-        <a href="/about">ABOUT</a>
+        <a href="store">STORE</a>
+        <a href="artists">ARTISTS</a>
+        <a href="about">ABOUT</a>
         <a href="#" class="cart">CART</a>
       </nav>
       <div class="rainbow-strip">
-        <img src="/images/rainbow-strip.svg" alt="Rainbow Strip">
+        <img src="images/rainbow-strip.svg" alt="Rainbow Strip">
       </div>
       <div class="hamburger-icon">
-        <img src="/images/hamburger-icon.svg" alt="Hamburger Menu">
+        <img src="images/hamburger-icon.svg" alt="Hamburger Menu">
       </div>
     </header>
 
@@ -46,7 +45,7 @@
           <p class="hero-detail">UNEXPLAINABLY GOOD MUSIC.</p>
         </div>
         <div class="hero-star">
-          <img src="/images/star.svg" alt="Star Graphic">
+          <img src="images/star.svg" alt="Star Graphic">
         </div>
       </div>
     </div>
@@ -54,16 +53,16 @@
     <!-- Latest Release Section -->
     <div class="latest-release">
       <div class="tape-stack">
-        <img src="/images/tape-stack.png" alt="Cassette Tape Stack">
+        <img src="images/tape-stack.png" alt="Cassette Tape Stack">
       </div>
       <div class="release-text">
         <h2 class="release-heading">LATEST RELEASE</h2>
         <h3 class="release-title">SIDE QUESTS VOL. 1</h3>
-        <img src="/images/rainbow-underline.svg" alt="Rainbow Underline" class="rainbow-underline">
+        <img src="images/rainbow-underline.svg" alt="Rainbow Underline" class="rainbow-underline">
         <p>The first ever Mystery Class Records release. Nine tracks by Oklahoma artists compiled by our team to show off the massive talent in our community.</p>
         <p><strong>Limited to 50 copies.</strong></p>
         <button class="pre-order">
-          <img src="/images/pre-order-button.svg" alt="Pre-Order Button">
+          <img src="images/pre-order-button.svg" alt="Pre-Order Button">
         </button>
       </div>
     </div>
@@ -72,7 +71,7 @@
     <div class="merch-section">
       <div class="merch-grid">
         <div class="merch-block">
-          <img src="/images/merch-block.svg" alt="Merch Block" class="block-frame">
+          <img src="images/merch-block.svg" alt="Merch Block" class="block-frame">
           <div class="merch-details">
             <div class="merch-info">
               <p class="artist-name">MYSTERY CLASS RECORDS</p>
@@ -84,7 +83,7 @@
 
         <!-- Additional Merch Blocks -->
         <div class="merch-block">
-          <img src="/images/merch-block.svg" alt="Merch Block" class="block-frame">
+          <img src="images/merch-block.svg" alt="Merch Block" class="block-frame">
           <div class="merch-details">
             <div class="merch-info">
               <p class="artist-name">CRYHARD</p>
@@ -94,7 +93,7 @@
           </div>
         </div>
         <div class="merch-block">
-          <img src="/images/merch-block.svg" alt="Merch Block" class="block-frame">
+          <img src="images/merch-block.svg" alt="Merch Block" class="block-frame">
           <div class="merch-details">
             <div class="merch-info">
               <p class="artist-name">CRYHARD</p>
@@ -104,7 +103,7 @@
           </div>
         </div>
         <div class="merch-block">
-          <img src="/images/merch-block.svg" alt="Merch Block" class="block-frame">
+          <img src="images/merch-block.svg" alt="Merch Block" class="block-frame">
           <div class="merch-details">
             <div class="merch-info">
               <p class="artist-name">CRYHARD</p>
@@ -114,7 +113,7 @@
           </div>
         </div>
         <div class="merch-block">
-          <img src="/images/merch-block.svg" alt="Merch Block" class="block-frame">
+          <img src="images/merch-block.svg" alt="Merch Block" class="block-frame">
           <div class="merch-details">
             <div class="merch-info">
               <p class="artist-name">CRYHARD</p>
@@ -124,7 +123,7 @@
           </div>
         </div>
         <div class="merch-block">
-          <img src="/images/merch-block.svg" alt="Merch Block" class="block-frame">
+          <img src="images/merch-block.svg" alt="Merch Block" class="block-frame">
           <div class="merch-details">
             <div class="merch-info">
               <p class="artist-name">CRYHARD</p>
@@ -134,7 +133,7 @@
           </div>
         </div>
         <div class="merch-block">
-          <img src="/images/merch-block.svg" alt="Merch Block" class="block-frame">
+          <img src="images/merch-block.svg" alt="Merch Block" class="block-frame">
           <div class="merch-details">
             <div class="merch-info">
               <p class="artist-name">CRYHARD</p>
@@ -144,7 +143,7 @@
           </div>
         </div>
         <div class="merch-block">
-          <img src="/images/merch-block.svg" alt="Merch Block" class="block-frame">
+          <img src="images/merch-block.svg" alt="Merch Block" class="block-frame">
           <div class="merch-details">
             <div class="merch-info">
               <p class="artist-name">CRYHARD</p>
@@ -161,37 +160,37 @@
       <div class="footer-top">
         <div class="footer-logo-container">
           <div class="footer-logo">
-            <img src="/images/footer-logo.svg" alt="Footer Logo">
+            <img src="images/footer-logo.svg" alt="Footer Logo">
           </div>
           <div class="footer-vertical-separator">
-            <img src="/images/footer-vertical-separator.svg" alt="Footer Vertical Separator">
+            <img src="images/footer-vertical-separator.svg" alt="Footer Vertical Separator">
           </div>
         </div>
         <nav class="footer-nav">
-          <a href="/store">STORE</a>
-          <a href="/artists">ARTISTS</a>
-          <a href="/about">ABOUT</a>
+          <a href="store">STORE</a>
+          <a href="artists">ARTISTS</a>
+          <a href="about">ABOUT</a>
         </nav>
       </div>
       <div class="footer-horizontal-separator">
-        <img src="/images/footer-horizontal-separator.svg" alt="Footer Horizontal Separator">
+        <img src="images/footer-horizontal-separator.svg" alt="Footer Horizontal Separator">
       </div>
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="/images/footer-icon.svg" alt="Footer Icon">
+          <img src="images/footer-icon.svg" alt="Footer Icon">
         </div>
         <div class="footer-copyright">
           <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
-          <img src="/images/social-icons.svg" alt="Social Icons">
+          <img src="images/social-icons.svg" alt="Social Icons">
         </div>
       </div>
     </footer>
 
     <!-- Scripts -->
-    <script src="/scripts/load-header-footer.js"></script>
-    <script src="/scripts/header-scroll.js"></script>
+    <script src="scripts/load-header-footer.js"></script>
+    <script src="scripts/header-scroll.js"></script>
   </body>
 </html>
